--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "vue": "^3.2.25"
   },
   "devDependencies": {
+    "@types/svgo": "^2.6.2",
     "@types/uuid": "^8.3.4",
+    "@types/webrtc": "^0.0.31",
     "@vitejs/plugin-vue": "^2.2.0",
     "sass": "^1.49.9",
     "typescript": "^4.5.4",
