--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,9 +13,7 @@ jobs:
           persist-credentials: false
 
       - name: Install and Build 🔧
-        run: |
-          npm
-          npm build
+        run: npm build
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@3.7.1
         with:
