--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "sass": "^1.49.9",
     "typescript": "^4.5.4",
     "vite": "^2.8.0",
+    "vite-plugin-pwa": "^0.11.13",
     "vite-svg-loader": "^3.1.2",
     "vue-tsc": "^0.29.8"
   }
