--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "uuid": "^9.0.0",
     "vite-plugin-pwa": "^0.14.4",
     "vue": "^3.2.41",
+    "vue-i18n": "^9.2.2",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
