--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "devDependencies": {
     "@iconify-json/material-symbols": "^1.1.26",
     "@iconify-json/mdi": "^1.1.44",
+    "@intlify/unplugin-vue-i18n": "^0.9.1",
+    "@intlify/vite-plugin-vue-i18n": "^7.0.0",
     "@types/lodash-es": "^4.17.6",
     "@types/node": "^18.11.18",
     "@types/qrcode": "^1.5.0",
@@ -28,11 +30,12 @@
     "@types/webrtc": "^0.0.33",
     "@unocss/reset": "^0.49.2",
     "@unocss/transformer-directives": "^0.49.2",
+    "@vitejs/plugin-legacy": "^4.0.1",
     "@vitejs/plugin-vue": "^3.2.0",
     "sass": "^1.57.1",
     "typescript": "^4.9.5",
     "unocss": "^0.49.1",
-    "vite": "^3.2.3",
+    "vite": "^4.0.0",
     "vite-plugin-mkcert": "^1.13.0",
     "vite-plugin-windicss": "^1.8.10",
     "vue-tsc": "^1.0.9",
