--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "@iconify-json/material-symbols": "^1.1.26",
     "@iconify-json/mdi": "^1.1.44",
     "@intlify/unplugin-vue-i18n": "^0.9.1",
-    "@intlify/vite-plugin-vue-i18n": "^7.0.0",
     "@types/lodash-es": "^4.17.6",
     "@types/node": "^18.11.18",
     "@types/qrcode": "^1.5.0",
@@ -31,11 +30,12 @@
     "@unocss/reset": "^0.49.2",
     "@unocss/transformer-directives": "^0.49.2",
     "@vitejs/plugin-legacy": "^4.0.1",
-    "@vitejs/plugin-vue": "^3.2.0",
+    "@vitejs/plugin-vue": "^4.0.0",
     "sass": "^1.57.1",
+    "terser": "^5.16.6",
     "typescript": "^4.9.5",
     "unocss": "^0.49.1",
-    "vite": "^4.0.0",
+    "vite": "^4.1.4",
     "vite-plugin-mkcert": "^1.13.0",
     "vite-plugin-windicss": "^1.8.10",
     "vue-tsc": "^1.0.9",
